--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-985.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-334.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-356.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-560.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.62MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-739.4KB/s(Youtube:不良林), server: 51.79.173.62, port: 1443, type: ss, cipher: aes-256-cfb, password: edGQaxoQhk}
-  - {name: 🇨🇳 中国-697.8KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
-  - {name: 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 0f38f32e-01aa-4c67-9c27-0eadb9068329, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
-  - {name: 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 04eb6d9d-f6b8-4f6a-92e7-b336b2168b26, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
+  - {name: 🇨🇳 中国-397.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-151.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-894.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.86MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: 199.115.228.30, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇺🇸 美国-301.3KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-985.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-739.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-151.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-985.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-739.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-151.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-985.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-739.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-151.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-985.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-739.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-151.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-985.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-739.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-151.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-985.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-739.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-151.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-985.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-739.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-397.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-151.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
