--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-697.8KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
-  - {name: 🇨🇳 中国-491.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-391.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-2.99MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-192.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.24MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇰🇷 韩国-2.86MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: 199.115.228.30, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
