--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-391.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-2.99MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-192.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-1.24MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇰🇷 韩国-2.86MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: 199.115.228.30, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-460.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇺🇸 美国-397.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-360.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇺🇸 美国-301.3KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.24MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
