--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-460.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇺🇸 美国-397.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-360.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-301.3KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.88MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-905.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.64MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-421.6KB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇸🇬 新加坡-2.07MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-397.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
